[package]
name = "css-color"
version = "0.1.1"
authors = ["Kal Conley <kcconley@gmail.com>"]
edition = "2018"
description = "Rust library for CSS color strings"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/kalcutter/rust-css-color"
keywords = ["color", "css", "parser"]

[dependencies]
lazy_static = "1.2.0"

[dev-dependencies]
serde_json = "1.0"

[features]
bench = []
