[package]
name = "css-color"
version = "0.2.5"
authors = ["Kal Conley <kcconley@gmail.com>"]
edition = "2018"
description = "Rust library for CSS color strings"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/kalcutter/rust-css-color"
keywords = ["color", "colour", "css", "css4", "parser"]

[dev-dependencies]
once_cell = "1.17.0"
regex = "1.7.1"
serde_json = "1.0"

[features]
bench = []
